# ParallelUniversesNetwork

./: Makefile.am  README.md  configure.ac
debian/: control-bionic.in  control-disco.in  control-focal.in  control-xenial.in
doc/: advanced.rst  basics.rst  conf.py  constraints.rst.py  extending.rst  faq.rst  index.rst  installation.rst  observables.rst.jinja  observables.rst.py  parameters.rst.py  references.rst.py  use-cases.rst
doc/api/: python.rst.jinja  python.rst.py
numerics/: inclusive-b-to-s-gamma-nlo.nb
pun/: Makefile.am  constraint.cc  constraint.hh  constraint_TEST.cc  observable-fwd.hh  observable-impl.hh  observable.cc  observable.hh  observable_TEST.cc  reference.cc  reference.hh  reference_TEST.cc  references_TEST.in  signal-pdf.cc  signal-pdf.hh
pun/b-decays/: Makefile.am  b-to-d-l-nu_TEST.cc  b-to-d-l-x-nu.cc  b-to-d-l-x-nu.hh  b-to-d-pi-l-nu.cc  b-to-d-pi-l-nu.hh  b-to-d-pi-l-nu_TEST.cc  b-to-dstar-l-nu_TEST.cc  b-to-k-nu-nu_TEST.cc  b-to-kstar-nu-nu_TEST.cc  b-to-l-nu.cc  b-to-l-nu.hh  b-to-l-nu_TEST.cc  b-to-pi-l-nu_TEST.cc  b-to-pi-l-x-nu.cc  b-to-pi-l-x-nu.hh  b-to-pi-pi-l-nu.cc  b-to-pi-pi-l-nu.hh  b-to-pi-pi-l-nu_TEST.cc  b-to-psd-l-nu.cc  b-to-psd-l-nu.hh  b-to-psd-nu-nu.cc  b-to-psd-nu-nu.hh  b-to-v-l-nu.hh  b-to-vec-l-nu-impl.hh  b-to-vec-l-nu.cc  b-to-vec-l-nu.hh  b-to-vec-nu-nu.cc  b-to-vec-nu-nu.hh  bs-to-kstar-l-nu.cc  bs-to-kstar-l-nu.hh  bs-to-kstar-l-nu_TEST.cc  inclusive-b-to-u.cc  inclusive-b-to-u.hh  lambdab-to-lambdac-l-nu.cc  lambdab-to-lambdac-l-nu.hh  lambdab-to-lambdac-l-nu_TEST.cc  lambdab-to-lambdac2595-l-nu.cc  lambdab-to-lambdac2595-l-nu.hh  lambdab-to-lambdac2595-l-nu_TEST.cc  (+8 more)
pun/form-factors/: Makefile.am  analytic-b-to-d-lcsr.cc  analytic-b-to-dstar-lcsr.cc  analytic-b-to-k-lcsr.cc  analytic-b-to-kstar-lcsr.cc  analytic-b-to-p-lcsr-impl.hh  analytic-b-to-p-lcsr.hh  analytic-b-to-p-lcsr_TEST.cc  analytic-b-to-pi-lcsr.cc  analytic-b-to-pi-pi.cc  analytic-b-to-pi-pi.hh  analytic-b-to-pi-pi_TEST.cc  analytic-b-to-pi.cc  analytic-b-to-pi.hh  analytic-b-to-pi_TEST.cc  analytic-b-to-rho-lcsr.cc  analytic-b-to-v-lcsr-impl.hh  analytic-b-to-v-lcsr.hh  analytic-b-to-v-lcsr_TEST.cc  analytic-bs-to-ds-lcsr.cc  analytic-bs-to-dsstar-lcsr.cc  analytic-bs-to-k-lcsr.cc  analytic-bs-to-kstar-lcsr.cc  analytic-bs-to-phi-lcsr.cc  b-lcdas.cc  b-lcdas.hh  b-lcdas_TEST.cc  baryonic-impl.hh  baryonic.cc  baryonic.hh  baryonic_TEST.cc  form-factor-adapter.hh  form-factors-fwd.hh  form-factors.cc  form-factors.hh  hqet-b-to-c.cc  hqet-b-to-c.hh  hqet-b-to-c_TEST.cc  kstar-lcdas.cc  kstar-lcdas.hh  (+22 more)
pun/maths/: Makefile.am  complex.hh  derivative.cc  derivative.hh  derivative_TEST.cc  gsl-interface.hh  gsl-interface_TEST.cc  integrate-impl.hh  integrate.cc  integrate.hh  integrate_TEST.cc  matrix.hh  matrix_TEST.cc  polylog.cc  polylog.hh  polylog_TEST.cc  power-of.hh  power-of_TEST.cc  szego-polynomial.hh  szego-polynomial_TEST.cc
pun/meson-mixing/: Makefile.am  bq-mixing.cc  bq-mixing.hh  bq-mixing_TEST.cc  observables.cc  observables.hh
pun/models/: Makefile.am  ckm.cc  ckm.hh  ckm_TEST.cc  model.cc  model.hh  standard-model.cc  standard-model.hh  standard-model_TEST.cc  top-loops.cc  top-loops.hh  top-loops_TEST.cc  wet.cc  wet.hh  wet_TEST.cc  wilson-coefficients.cc  wilson-coefficients.hh  wilson-coefficients_TEST.cc
pun/parameters/: sm-and-eft.yaml
pun/rare-b-decays/: Makefile.am  b-to-k-charmonium.cc  b-to-k-charmonium.hh  b-to-k-charmonium_TEST.cc  b-to-k-ll-base.cc  b-to-k-ll-base.hh  b-to-k-ll-bfs2004.cc  b-to-k-ll-bfs2004.hh  b-to-k-ll-bfs2004_TEST.cc  b-to-k-ll-gp2004.cc  b-to-k-ll-gp2004.hh  b-to-k-ll-gp2004_TEST.cc  b-to-k-ll-gvdv2020.cc  b-to-k-ll-gvdv2020.hh  b-to-k-ll-gvdv2020_TEST.cc  b-to-k-ll.cc  b-to-k-ll.hh  b-to-kstar-charmonium.cc  b-to-kstar-charmonium.hh  b-to-kstar-charmonium_TEST.cc  b-to-kstar-gamma-base.cc  b-to-kstar-gamma-base.hh  b-to-kstar-gamma-bfs2004.cc  b-to-kstar-gamma-bfs2004.hh  b-to-kstar-gamma-bfs2004_TEST.cc  b-to-kstar-gamma.cc  b-to-kstar-gamma.hh  b-to-kstar-ll-base.cc  b-to-kstar-ll-base.hh  b-to-kstar-ll-bfs2004.cc  b-to-kstar-ll-bfs2004.hh  b-to-kstar-ll-bfs2004_TEST.cc  b-to-kstar-ll-gp2004.cc  b-to-kstar-ll-gp2004.hh  b-to-kstar-ll-gp2004_TEST.cc  b-to-kstar-ll-gvdv2020.cc  b-to-kstar-ll-gvdv2020.hh  b-to-kstar-ll-gvdv2020_TEST.cc  b-to-kstar-ll.cc  b-to-kstar-ll.hh  (+54 more)
pun/statistics/: Makefile.am  goodness-of-fit.cc  goodness-of-fit.hh  log-likelihood-fwd.hh  log-likelihood.cc  log-likelihood.hh  log-likelihood_TEST.cc  log-posterior-fwd.hh  log-posterior.cc  log-posterior.hh  log-posterior_TEST.cc  log-posterior_TEST.hh  log-prior-fwd.hh  log-prior.cc  log-prior.hh  log-prior_TEST.cc  test-statistic-impl.hh  test-statistic.cc  test-statistic.hh
python/: _pun.cc  pun_TEST.py  setup.py.in
python/PUN/: __init__.py  analysis.py  analysis_TEST.py  analysis_file.py  config.py  constraint.py  ipython.py  observable.py  observable_TEST.py  parameter.py  parameter_TEST.py  reference.py  signal_pdf.py  tasks.py
python/PUN/data/: __init__.py  hdf5.py  pypmc.py
python/PUN/plot/: __init__.py  config.py  plotter.py  plotter_TEST.py
src/clients/: .gitignore  Makefile.am  cli_dumper.cc  cli_dumper.hh  cli_error.cc  cli_error.hh  cli_group.cc  cli_group.hh  cli_handler.cc  cli_handler.hh  cli_option.cc  cli_option.hh  cli_section.cc  cli_section.hh  cli_visitor.cc  cli_visitor.hh  pun-evaluate.cc  pun-list-constraints.cc  pun-list-observables.cc  pun-list-parameters.cc  pun-list-signal-pdfs.cc  pun-print-polynomial.cc  pun-scan.cc
src/scripts/: Makefile.am  pun-analysis  pun-analysis_TEST  pun-make-constraint  pun-merge-mcmc  pun-plot  pun-plot-1d  pun-plot-2d  pun-prepare-home  pun-print-modes  pun-print-uncertainty
test/: Makefile.am  test.cc  test.hh  test_TEST.cc
